<resources>
    <string name="app_name">Bill Please</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="together">Together</string>
    <string name="split">Split</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="enter_discount">Enter discount (%)</string>
    <string name="discount">Discount (%)</string>
    <string name="gst">GST</string>
    <string name="no_gst">No GST</string>
    <string name="svs">SVS</string>
    <string name="no_svs">No SVS</string>
    <string name="enter_pax">Enter pax</string>
    <string name="enter_amount">Enter amount</string>
    <string name="amount">Amount</string>
    <string name="textview">TextView</string>
    <string name="total_bill">Total Bill:</string>
    <string name="reset">Reset</string>
    <string name="each_pays">Each Pays:</string>
</resources>