<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/editTextInputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Num of Pax" />

        <EditText
            android:id="@+id/editTextInputPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_pax"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="No Svs"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/gst"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/editTextInputDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_discount"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroupPayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/radioButtonPayNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSplit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textOff="@string/split"
            android:textOn="@string/together" />

        <ToggleButton
            android:id="@+id/toggleButtonReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textOff="@string/reset"
            android:textOn="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_bill" />

        <TextView
            android:id="@+id/textViewEach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pays" />

    </LinearLayout>

</LinearLayout>
